# ros2_quadrotor

./: .gitignore  README.md  pytest.ini  requirements-dev.txt
.github/workflows/: tests.yml
docs/: eval_hold_100ep.json
scripts/: check_env_smoke.py  check_sampling_smoke.py  eval_hover.py  list_checkpoints.py  record_demo.py
src/goal_controller/: package.xml  setup.cfg  setup.py
src/goal_controller/goal_controller/: controller_node.py
src/quadrotor_sim/: CMakeLists.txt  package.xml
src/quadrotor_sim/config/: demo_gui.config
src/quadrotor_sim/launch/: quadrotor.launch.py  quadrotor_gui.launch.py
src/quadrotor_sim/models/quadrotor/: quadrotor.sdf  quadrotor.urdf.xacro
src/quadrotor_sim/quadrotor_sim/envs/: quadrotor_hover_env.py
src/quadrotor_sim/quadrotor_sim/train/: callbacks.py  test_reset_timing.py  train_hover.py
src/quadrotor_sim/worlds/: empty.sdf  empty_train.sdf
tests/: conftest.py  test_sampling_smoke.py
